kubernetes/codigo_curso/deploy_ingress_apache/deploy_apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deploy
spec:
  replica: 1
  selector:
    matchLabels: 
      app: apache
  template:
    metadata:
      app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
          - containerPort: 80
